
[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="simmate"
version="0.18.0"
authors = [{name = "Jack D. Sundberg", email = "jacksundberg123@gmail.com"}]
description="Simmate is a full-stack framework for chemistry research."
readme = ".github/README_for_PyPI.md"
license = {text = "BSD 3-Clause License"}
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python=">=3.10, <3.12"
dependencies = [
    # Core dependencies
    "numpy>=1.22.0,<1.24.2",
    "pandas>=2.0.0,<2.1.4",
    "django>=4.0.0,<4.2.8",
    "typer>=0.6.0,<0.7.1",
    "psycopg2-binary>=2.8.0,<3.0.0",
    # BUG-FIX for typer
    # https://github.com/fastapi/typer/discussions/1215
    # https://github.com/fastapi/typer/pull/1222
    "click<8.2.0",
    # Material/Crystal-based dependencies
    "pymatgen>=2022.1.9,<2023.5.32",
    "pymatgen-analysis-diffusion>=2021.4.29,<=2023.8.15",
    "matminer>=0.9.3,<=0.9.3",
    "ase>=3.22.1,<=3.23.0",
    # Molecule-based dependencies
    "rdkit>=2024.03.1,<=2024.03.1",
    "ipython>=8.22.2,<=8.29.0",
    "umap-learn>=0.5.5,<=0.5.5",
    # Extra (smaller) dependencies & utilities
    "django-allauth>=0.56.0,<=0.63.3",
    "django-simple-history>=3.11.0,<=3.11.0",
    "pyyaml>=6.0,<=6.0.1",
    "plotly>=5.4.0,<5.19.0",
    "markdown>=3.4.1,<=3.5.1",
    "requests>=2.28.1,<=2.32.3",
    "scikit-learn>=1.1.1,<1.5.1",
    "cloudpickle>=2.1.0,<=3.0.0",
    "rich>=11.0,<=13.5.2",
    "toml>=0.10.2,<=0.10.2",
    "schedule>=1.2.0,<=1.2.0",
    "xmltodict>=0.13.0,<=0.13.0",
    "dask>=2023.6.1,<2024.4.3",
    "distributed>=2023.6.1,<2024.4.3",
    "beautifulsoup4>=4.0.0,<=4.13.5",
    "cachetools>=6.0.0,<=6.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=6.2.5,<=7.3.2",
    "pytest-django>=4.5.2,<=4.8.0",
    "pytest-mock>=3.7.0,<3.14.1",
    "pytest-xdist>=2.5.0,<3.4.0",
    "coverage>=6.2,<7.4.4",
    # Formatting & Linting
    "black>=26.1.0,<27.0.0",
    "isort>=7.0.0,<8.0.0",
    "djlint>=1.36.4,<1.37.0",
    # Docs
    "mkdocs-material>=9.5.44,<9.6.0",
    "mkdocstrings>=0.25.2,<=0.26.0",
    "mkdocstrings-python>=1.10.9,<1.11.0",
    "mkdocs-autorefs>=1.3.1,<1.4.0",  # BUG-FIX
]
# App-specific deps
# baderkit = [
#     "baderkit>=0.8.0",
# ]
# clease = [
#     "clease>1.0.3,<=1.0.6",
# ]
# materials_project = [
#     "mp-api>=0.26.3,<0.39.2",
# ]
# price_catalog = [
#     "yfinance",
# ]
# # other notes
# extras = [
#     "spyder",            # Recommended IDE for development
#     "dask-jobqueue",     # for submitting on HPC clusters
#     "numba",             # for speed-up of basic calcs
#     "psycopg2-binary",   # for Postgres connections (added -binary to fix bug)
#     "selenium",          # for web scraping (slow but robust)
#     "gunicorn",          # for website server (Django+DigitalOcean) # NOT WINDOWS
#     "pygraphviz",        # pygraphviz on conda. for viewing django tables
#     "fabric",            # for remote ssh connections
#     "django-extensions", # simple tools to help with django development
#     "bokeh",             # for the dask dashboard
#     "h5py",              # for reading QE's binary output files
#     # OpenEye needs to point to a different source & a license is required:
#     #   pip install -i https://pypi.anaconda.org/OpenEye/simple OpenEye-toolkits
#     # "OpenEye-toolkits @ https://pypi.anaconda.org/OpenEye/simple",
#     # ^^^ BUG: must be commented out for pypi uploads to work
# ]

[project.urls]
homepage = "https://simmate.org/"
repository = "https://github.com/jacksund/simmate"
documentation = "https://jacksund.github.io/simmate/home/"

[project.scripts]
simmate = "simmate.command_line.base_command:simmate_app"
simmate-vasp = "simmate.apps.vasp.command_line.base_command:vasp_app"
simmate-qe = "simmate.apps.quantum_espresso.command_line.base_command:qe_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
simmate = [
    "**/*.md",
    "**/*.rst",
    "**/*.json",
    "**/*.csv",
    "**/*.yaml",
    "**/*.html",
    "**/*.svg",
    "**/*.toml",
    "**/*.css",
    "**/*.js",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "simmate.configuration.django.settings_test"
markers = [
    "blender: requires blender installed",
    "vasp: requires vasp installed",
    "pymatgen: runs a pymatgen-compatibility test",
    "prefect_db: requires access to the prefect database",
    "slow: test is slow (>30s) and unstable in in the CI",
]
addopts = "--no-migrations --durations=15 -m 'not blender and not vasp'"
filterwarnings = [
    "ignore:cannot collect test class*:Warning",
    "ignore:Issues encountered while parsing CIF*:Warning",
    "ignore:No POTCAR file with matching TITEL fields*:Warning",
    "ignore:The input structure does not match the expected standard primitive!*:Warning",
    "ignore:Maximum iteration number is reached*:Warning",
    # "ignore:*is an unconverged VASP run*:Warning", BUG: why won't this regex work?
]

[tool.coverage.run]
command_line = "-m pytest"
omit = ["*/test_*", "*/conftest.py", "*/*_test.py"]

[tool.isort]
profile = "black"
