
[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="simmate"
version="0.18.0"
authors = [{name = "Jack D. Sundberg", email = "jacksundberg123@gmail.com"}]
description="Simmate is a full-stack framework for chemistry research."
readme = ".github/README_for_PyPI.md"
license = {text = "BSD 3-Clause License"}
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python=">=3.10, <3.12"
dependencies = [
    # Core dependencies
    "numpy>=1.22.0,<1.24.2",
    "pandas>=2.0.0,<3.0.0",
    "django>=5.2.11,<6.0.0",
    "typer>=0.24.1,<0.25.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    # Material/Crystal-based dependencies
    "pymatgen>=2022.1.9,<2023.5.32",
    "pymatgen-analysis-diffusion>=2021.4.29,<=2023.8.15",
    "matminer>=0.9.3,<0.10.0",
    "ase>=3.22.1,<3.23.0",
    # Molecule-based dependencies
    "rdkit>=2025.9.5,<2025.9.6",
    "ipython>=8.22.2,<10.0.0",  # displaying rdkit images
    # Extra (smaller) dependencies & utilities
    "django-allauth>=0.63.3,<0.64.0",
    "django-simple-history>=3.11.0,<3.12.0",
    "pyyaml>=6.0.3,<7.0.0",
    "plotly>=6.5.0,<7.0.0",
    "markdown>=3.4.1,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    "scikit-learn>=1.1.1,<2.0.0",
    "cloudpickle>=3.1.2,<=4.0.0",
    "rich>=14.3.3,<15.0.0",
    "toml>=0.10.2,<0.11.0",
    "schedule>=1.2.2,<2.0.0",
    "xmltodict>=1.0.4,<2.0.0",
    "dask>=2026.1.2,<2026.1.3",  # deprec
    "distributed>=2026.1.2,<2026.1.3",  # deprec
    "beautifulsoup4>=4.0.0,<5.0.0",
    "cachetools>=7.0.1,<8.0.0",
    "umap-learn>=0.5.5,<0.6.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.0,<10.0.0",
    "pytest-django>=4.12.0,<5.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "coverage>=7.13.4,<8.0.0",
    # Formatting & Linting
    "black>=26.1.0,<27.0.0",
    "isort>=8.0.0,<9.0.0",
    "djlint>=1.36.4,<2.0.0",
    # Docs
    "mkdocs-material>=9.7.3,<10.0.0",
    "mkdocstrings>=1.0.3,<2.0.0",
    "mkdocstrings-python>=2.0.3,<3.0.0",
    "mkdocs-autorefs>=1.4.4,<2.0.0",  # BUG-FIX
]
# App-specific deps
# baderkit = [
#     "baderkit>=0.8.0",
# ]
# clease = [
#     "clease>1.0.3,<=1.0.6",
# ]
# materials_project = [
#     "mp-api>=0.26.3,<0.39.2",
# ]
# price_catalog = [
#     "yfinance",
# ]
# # other notes
# extras = [
#     "spyder",            # Recommended IDE for development
#     "dask-jobqueue",     # for submitting on HPC clusters
#     "numba",             # for speed-up of basic calcs
#     "psycopg2-binary",   # for Postgres connections (added -binary to fix bug)
#     "selenium",          # for web scraping (slow but robust)
#     "gunicorn",          # for website server (Django+DigitalOcean) # NOT WINDOWS
#     "pygraphviz",        # pygraphviz on conda. for viewing django tables
#     "fabric",            # for remote ssh connections
#     "django-extensions", # simple tools to help with django development
#     "bokeh",             # for the dask dashboard
#     "h5py",              # for reading QE's binary output files
#     # OpenEye needs to point to a different source & a license is required:
#     #   pip install -i https://pypi.anaconda.org/OpenEye/simple OpenEye-toolkits
#     # "OpenEye-toolkits @ https://pypi.anaconda.org/OpenEye/simple",
#     # ^^^ BUG: must be commented out for pypi uploads to work
# ]

[project.urls]
homepage = "https://simmate.org/"
repository = "https://github.com/jacksund/simmate"
documentation = "https://jacksund.github.io/simmate/home/"

[project.scripts]
simmate = "simmate.command_line.base_command:simmate_app"
simmate-vasp = "simmate.apps.vasp.command_line.base_command:vasp_app"
simmate-qe = "simmate.apps.quantum_espresso.command_line.base_command:qe_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
simmate = [
    "**/*.md",
    "**/*.rst",
    "**/*.json",
    "**/*.csv",
    "**/*.yaml",
    "**/*.html",
    "**/*.svg",
    "**/*.toml",
    "**/*.css",
    "**/*.js",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "simmate.configuration.django.settings_test"
markers = [
    "blender: requires blender installed",
    "vasp: requires vasp installed",
    "pymatgen: runs a pymatgen-compatibility test",
    "prefect_db: requires access to the prefect database",
    "slow: test is slow (>30s) and unstable in in the CI",
]
addopts = "--no-migrations --durations=15 -m 'not blender and not vasp'"
filterwarnings = [
    "ignore:cannot collect test class*:Warning",
    "ignore:Issues encountered while parsing CIF*:Warning",
    "ignore:No POTCAR file with matching TITEL fields*:Warning",
    "ignore:The input structure does not match the expected standard primitive!*:Warning",
    "ignore:Maximum iteration number is reached*:Warning",
    # "ignore:*is an unconverged VASP run*:Warning", BUG: why won't this regex work?
]

[tool.coverage.run]
command_line = "-m pytest"
omit = ["*/test_*", "*/conftest.py", "*/*_test.py"]

[tool.isort]
profile = "black"
